--- a/isolado.html
+++ b/isolado.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/be07557a2e.js" crossorigin="anonymous"></script>
-    <script src="./js/data.js" defer></script>
+    <script src="./js/dados.js" defer></script>
     <title> Furadeira Bosch </title>
 </head>
 <body>
@@ -45,7 +45,7 @@
     <main>
 
         <div class="main">
-            <div class="container-prod">
+            <!-- <div class="container-prod">
                 <div class="imagem-prod">
                     <img src="/img/Imagens_produto/proteina/isolado.png" alt="furadeira bosch">
                 </div>
@@ -63,7 +63,7 @@
                 <div class="fav-prod">
                     <a href=""><i class="fa-solid fa-cart-shopping" style="color: white;"></i></a>
                     <p style="color: white;"> Comprar </p>
-                </div>
+                </div> 
             </div>
 
             <div class="container-info">
@@ -86,7 +86,7 @@
 
                 <div class="info-produto">
                     <p id="info-prod"> + DESCRIÇÃO </p>
-                    <p style="text-indent: 1.5rem;">O diferencial da proteína isolada 
+                    <p style="text-indent: 1.5rem;"> O diferencial da proteína isolada 
                         é que o produto oferece a maior concentração de proteínas
                         possível do mercado e baixíssima quantidade de carboidratos.
                         A composição de proteínas do whey protein isolado da Growth
@@ -94,22 +94,7 @@
                         quantidade de carboidratos e quantidades insignificantes de gordura.</p>
                 </div>
 
-                <div class="carac-tecnica">
-                    <p id="info-prod"> INFORMAÇÕES </p>
-
-                    <div class="tecnicas">
-
-                        <ul id="itens-tec">
-                            <li> Produto|  Whey protein Isolado </li>
-                            <li> Marca|  Growth </li>
-                            <li> Tipo|  Isolado </li>
-                            <li> Uso Indicado|  Emagrecimento </li>
-                            <li> Vantagem | Baixo em carboidratos </li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
+            </div> -->
         </div>    
     </main>
 
