--- a/compras.html
+++ b/compras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/be07557a2e.js" crossorigin="anonymous"></script>
-    <script src="./js/data.js" defer></script>
+    <script src="./js/dados.js" defer></script>
     <title> Minhas Compras </title>
 </head>
 <body>
