--- a/sobre nós.html
+++ b/sobre nós.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/be07557a2e.js" crossorigin="anonymous"></script>
-    <script src="./js/data.js" defer></script>
+    <script src="./js/dados.js" defer></script>
     <title> Sobre Nós </title>
 </head>
 <body>
