--- a/produto.html
+++ b/produto.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/be07557a2e.js" crossorigin="anonymous"></script>
     <script src="./js/dados.js" defer></script>
-    <title> Furadeira Bosch </title>
+    <title> Produto </title>
 </head>
 <body>
     <header>
@@ -44,8 +44,8 @@
 
     <main>
 
-        <div class="main">
-            <!-- <div class="container-prod">
+        <div class="main" id="product_container">
+        <!-- <div class="container-prod">
                 <div class="imagem-prod">
                     <img src="/img/Imagens_produto/proteina/isolado.png" alt="furadeira bosch">
                 </div>
@@ -62,7 +62,7 @@
 
                 <div class="fav-prod">
                     <a href=""><i class="fa-solid fa-cart-shopping" style="color: white;"></i></a>
-                    <p style="color: white;"> Comprar </p>
+                    <button class="comprar"> Comprar </button>
                 </div> 
             </div>
 
