--- a/compras.html
+++ b/compras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/be07557a2e.js" crossorigin="anonymous"></script>
-    <script src="./js/dados.js" defer></script>
+    <script src="./js/carrinho.js" defer type="module"></script>
     <title> Minhas Compras </title>
 </head>
 <body>
@@ -43,7 +43,7 @@
         <div class="linha-superior"></div>
     </header>
 
-    <main class="main-carrinho">
+      <main class="main-carrinho">
         <div class="page-title">Seu Carrinho</div>
         <div class="content">
           <section>
@@ -58,7 +58,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <!-- <tr>
                   <td>
                     <div class="product">
                       <img src="./img/Imagens_produto/aminoacidos/aminoacido.png" alt="" />
@@ -126,7 +126,7 @@
                   <td>
                     <button class="remove"><i class="fa-solid fa-trash-can"></i></button>
                   </td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </section>
@@ -134,7 +134,7 @@
             <div class="box">
               <header>Resumo da compra</header>
               <div class="info">
-                <div><span>Sub-total</span><span>R$ 480</span></div>
+                <div><span>Sub-total</span><span>R$ </span></div>
                 <div><span>Frete</span><span>Gratuito</span></div>
                 <div>
                     <button>
@@ -143,14 +143,68 @@
                     </button>
                 </div>
               </div>
-              <footer>
+              <footer class="valorTotal">
                 <span>Total</span>
-                <span>R$ 480</span>
+                <span>R$ </span>
               </footer>
             </div>
-            <button>Finalizar Compra</button>
+            <button id="but_end">Finalizar Compra</button>
           </aside>
         </div>
+
+        <h1>Adicionar Endereço de Envio</h2>
+        <div id="formulario">
+        
+        <form action="" id="address_form">
+            <label for="name">Nome Completo:</label>
+            <input type="text" id="nome" name="name">
+            <label for="logradouro">Logradouro e N°:</label>
+            <input type="text" id="logradouro" name="logradouro">
+            <label for="bairro">Bairro:</label>
+            <input type="text" id="bairro" name="bairro">
+            <label for="cidade">Cidade:</label>
+            <input type="text" id="cidade" name="estado">
+            <!-- <label for="estado">Estado:</label>
+            <input type="text" id="estado" name="estado"> -->
+            <label for="estado de nascimento">Estado:</label>
+            <input type="uf_localização" list="Estados" type="text" id="Estados_brasileiros"/>
+            <datalist id="Estados">
+                <option value="AC"> Acre </option>
+                <option value="AL"> Alagoas </option>
+                <option value="AP"> Amapá </option>
+                <option value="AM"> Amazonas </option>
+                <option value="BA"> Bahia </option>
+                <option value="CE"> Ceará </option>
+                <option value="DF"> Distrito Federal </option>
+                <option value="ES"> Espirito Santo </option>
+                <option value="GO"> Goiás </option>
+                <option value="MA"> Maranhão </option>
+                <option value="MT"> Mato Grosso </option>
+                <option value="MS"> Mato Grosso do Sul </option>
+                <option value="MG"> Minas Gerais </option>
+                <option value="PA"> Para </option>
+                <option value="PB"> Paraiba </option>
+                <option value="PR"> Parana </option>
+                <option value="PE"> Pernanbuco </option>
+                <option value="PI"> Piauí </option>
+                <option value="RJ"> Rio de Janeiro </option>
+                <option value="RN"> Rio Grande do Norte </option>
+                <option value="RS"> Rio Grande do Sul </option>
+                <option value="RO"> Rondônia </option>
+                <option value="RR"> Roraima </option>
+                <option value="SC"> Santa Catarina </option>
+                <option value="SP"> Sâo Paulo </option>
+                <option value="SE"> Sergipe </option>
+                <option value="TO"> Tocantins </option>
+            </datalist>
+            <label for="CEP">CEP:</label>
+            <input type="text" id="CEP" name="CEP">
+            <label for="telefone">Telefone:</label>
+            <input type="text" id="telefone" name="telefone">
+            <label for="e-mail">E-mail:</label>
+            <input type="email" id="email" name="email">
+        </form>
+    </div>
       </main>
 
  
