--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>    
         </div>
 
-        <p> DESTAQUES </p>
+        <p id="destaque"> DESTAQUES </p>
         <div class="lista-produtos" id="home_product_grid">
             <!-- <div class="produto">
                 <div class="img-produto">
