--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <p id="destaque"> DESTAQUES </p>
-        <div class="lista-produtos" id="home_product_grid">
+        <section class="lista-produtos" id="home_product_grid">
             <!-- <div class="produto">
                 <div class="img-produto">
                     <img src="" alt="produto-7">
@@ -89,7 +89,7 @@
                 </div>
             </div>    -->
             
-        </div>
+        </section>
 
     </main>
     
