--- a/produtos.html
+++ b/produtos.html
@@ -45,7 +45,7 @@
 
     <main class="main-prod">
 
-        <div class="content-prod">
+        <section class="content-prod">
             <div class="prod-proteinas" id="prod-proteinas">
                 <p> Proteínas </p>
             </div>
@@ -69,7 +69,7 @@
             <div class="lista-produtos3" id="prod_aminoacidos">
             
             </div> 
-        </div>
+        </section>
         
 
     </main>
