--- a/produto.html
+++ b/produto.html
@@ -44,7 +44,7 @@
 
     <main>
 
-        <div class="main" id="product_container">
+        <section class="main" id="product_container">
         <!-- <div class="container-prod">
                 <div class="imagem-prod">
                     <img src="/img/Imagens_produto/proteina/isolado.png" alt="furadeira bosch">
@@ -97,7 +97,7 @@
                
 
             </div>
-        </div>    
+        </section>    
     </main>
 
     <footer class="footer">
